...
                icon: Icon(
                  Icons.language_rounded,
                  color: AppTheme.accentColor(context),
                  size: 18,
                ),
                label: Text(
                  locProv.isSpanish ? 'Español (ES)' : 'English (EN)',
                  style: const TextStyle(
                    fontWeight: FontWeight.bold,
                    fontSize: 13,
                  ),
                ),
                onPressed: () {
...
